RESOLVED FIXED85972
[EFL][DRT] EventSender - set delayed event information if it was not set before
https://bugs.webkit.org/show_bug.cgi?id=85972
Summary [EFL][DRT] EventSender - set delayed event information if it was not set before
Alexander Shalamov
Reported 2012-05-09 02:58:53 PDT
In some cases, event that was delayed by leapForward could contain empty information about event. In that case, we need to re-set it.
Attachments
Patch (3.32 KB, patch)
2012-05-09 03:07 PDT, Alexander Shalamov
no flags
Alexander Shalamov
Comment 1 2012-05-09 03:07:26 PDT
Created attachment 140898 [details] Patch set event information to delayed event
Raphael Kubo da Costa (:rakuco)
Comment 2 2012-05-09 09:45:48 PDT
Comment on attachment 140898 [details] Patch I guess that makes sense. Informal rs+.
WebKit Review Bot
Comment 3 2012-05-10 04:55:50 PDT
Comment on attachment 140898 [details] Patch Clearing flags on attachment: 140898 Committed r116630: <http://trac.webkit.org/changeset/116630>
WebKit Review Bot
Comment 4 2012-05-10 04:55:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.