[EFL][DRT] EventSender - set delayed event information if it was not set before https://bugs.webkit.org/show_bug.cgi?id=85972

Patch by Alexander Shalamov <alexander.shalamov@intel.com> on 2012-05-10
Reviewed by Gustavo Noronha Silva.

Tools:

Reset delayed event information if it is missing.

* DumpRenderTree/efl/EventSender.cpp:
(feedOrQueueMouseEvent):

LayoutTests:

Unskipping layout tests that were skipped because of the bug.

* platform/efl/Skipped:

git-svn-id: svn://svn.chromium.org/blink/trunk@116630 bbb929c8-8fbe-4397-9dbb-9b2b20218538