third_party/WebKit/Tools/DumpRenderTree/efl/EventSender.cpp
@@ -652,9 +652,9 @@ static void feedOrQueueMouseEvent(MouseEventInfo* eventInfo, EventQueueStrategy 
 {
     if (!delayedEventQueue().isEmpty()) {
         if (delayedEventQueue().last().eventInfo)
-            delayedEventQueue().last().eventInfo = eventInfo;
-        else
             delayedEventQueue().append(DelayedEvent(eventInfo));
+        else
+            delayedEventQueue().last().eventInfo = eventInfo;
 
         if (strategy == FeedQueuedEvents)
             feedQueuedMouseEvents();
